Support legacy text encodings when reading files